# ApiOpenAI

./: CMakeLists.txt  vcpkg.json
cmake/: openai-config.cmake.in  utils.cmake
include/OpenAI/: Dalle.h  GptTurbo.h  HttpContext.h  HttpsClient.h  OpenAI.h  OpenAIApi.h  OpenAIModel.h  Speaker.h  Whisper.h
include/OpenAI/Types/: ChatCompletionsRequest.h  ChatCompletionsResponse.h  CreateImageRequest.h  CreateImageResponse.h  FileInfo.h  Message.h  ResponseFormat.h  Size.h  SpeechRequest.h  TranscriptionsRequest.h  Usage.h  Voice.h
src/OpenAI/: Dalle.cpp  GptTurbo.cpp  OpenAI.cpp  OpenAIApi.cpp  OpenAIModel.cpp  Speaker.cpp  Whisper.cpp
tests/OpenAI/: CMakeLists.txt  NoThrowTests.cpp
